added the rest of the components to the homepage

--- a/asad-portfolio/src/component/sass/_base.scss
+++ b/asad-portfolio/src/component/sass/_base.scss
@@ -55,3 +55,7 @@ button{
    @content;
  }
 }
+@mixin box-style{
+  background: linear-gradient(145deg, #e2e8ec, #ffffff);
+  box-shadow: 4px 4px 8px #cbcbcb, -4px -4px 8px #ffffff;
+}
