--- a/asad-portfolio/src/component/services/_Card.scss
+++ b/asad-portfolio/src/component/services/_Card.scss
@@ -22,33 +22,15 @@
     "ar"
     "ar"
     "ar";
-
   }
   &__h2 {
     grid-area: hs;
   }
-  &__h2 {
-    grid-area: hs;
-  }
 
-  &--ar1 {
-    grid-area: ar1;
-
-  }
-
-  &--ar2 {
-    grid-area: ar2;
-
-  }
-  &--ar3 {
-    grid-area: ar3;
-
-  }
 }
 
 .Card__container{
-  background: linear-gradient(145deg, #e2e8ec, #ffffff);
-  box-shadow: 4px 4px 8px #cbcbcb, -4px -4px 8px #ffffff;
+  @include base.box-style;
   padding: 10%;
   display: grid;
   grid-template-rows: 0.2fr 0.5fr 0.1fr;
