--- a/asad-portfolio/src/component/blogs/_Blogs.scss
+++ b/asad-portfolio/src/component/blogs/_Blogs.scss
@@ -1,4 +1,4 @@
-@use "../sass/base";
+@use "../../sass/_base";
 .blogs {
   grid-area: blogs;
   display: grid;
@@ -7,12 +7,14 @@
   gap: 30px;
   justify-items: center;
   justify-content: center;
-
+  
   &__article {
     display: grid;
     grid-template-columns: 0.2fr 0.8fr;
     grid-template-rows: 0.2fr 1fr 0.6fr;
     gap: 20px;
+    padding-top: 5%;
+    padding-bottom: 5%;
     justify-content: center;
     grid-template-areas:
       "b-image h3"
