--- a/asad-portfolio/src/sass/_base.scss
+++ b/asad-portfolio/src/sass/_base.scss
@@ -3,11 +3,12 @@
   padding: 0;
   margin:0;
   box-sizing:border-box;
+  font-family: 'Poppins', sans-serif;
 }
 html{
   scroll-behavior: smooth;
 }
-.container{
+.home__container{
   justify-content: center;
   margin: auto;
   display: grid;
@@ -23,13 +24,22 @@ html{
     "footer";
   gap: 3rem;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  
   background-color: rgb(235, 235, 235);
 }
-.containers{
-
-  max-width: 95%;
-  margin:auto;
+.blogs__container{
+  justify-content: center;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 90vw;
+  grid-template-rows: 10vh 0.2fr;
+  grid-template-areas:
+    "nav"
+    "heroAllblogs"
+    "blogs"
+    "footer";
+  gap: 3rem;
+  box-sizing: border-box;
 }
 a{
   text-decoration: none;
