--- a/asad-portfolio/src/sass/_main.scss
+++ b/asad-portfolio/src/sass/_main.scss
@@ -7,3 +7,4 @@
 @use "../component/blogs/Blogs";
 @use "../component/form/Form";
 @use "../component/footer/Footer";
+@use "../component//buttonMain/ButtonMain"
