--- a/asad-portfolio/src/component/hero/_hero.scss
+++ b/asad-portfolio/src/component/hero/_hero.scss
@@ -7,22 +7,20 @@
  gap: 50px;
  justify-content: center;
  grid-template-areas:
-   "text pic"
+   "text_h1 pic"
    "p pic"
    "arrow arrow";
    @include base.bp-devices {
-    height: 100%;
-    width: 100%;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 0.5fr 1fr min-content;
+    grid-template-rows: 1fr 0.5fr 1fr;
     grid-template-areas:
       "pic"
-      "text"
-      "p"
-      "arrow";
+      "text_h1"
+      "p";
+      justify-items: center;
   }
    &__h1 {
-    grid-area: text;
+    grid-area: text_h1;
     display: flex;
     align-self: end;
     font-size: 1.5rem;
@@ -32,6 +30,7 @@
     grid-area: p;
     display: flex;
     justify-content: center;
+    font-weight: bold;
   }
   &__img {
     display: flex;
@@ -39,6 +38,9 @@
     align-items: center;
     grid-area: pic;
     width: 100%;
+    @include base.bp-devices {
+      width: 80%;
+    }
   }
   .arrow {
     width: 0;
@@ -52,29 +54,25 @@
     margin: auto;
     animation: arrow-move ease-in-out 3s infinite;
   }
+  &__typewriter {
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap; 
+    margin: 0 auto; 
+    letter-spacing: .15em; 
+    animation: 
+      typing 3.5s steps(30, end),
+      blink-caret .5s step-end infinite;
+  }
+  @keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+  }
+  @keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange }
+  }
+
 }
 
-/* DEMO-SPECIFIC STYLES */
-.typewriter {
 
-  overflow: hidden;
-  border-right: .15em solid orange;
-  white-space: nowrap; 
-  margin: 0 auto; 
-  letter-spacing: .15em; /* Adjust as needed */
-  animation: 
-    typing 3.5s steps(30, end),
-    blink-caret .5s step-end infinite;
-}
-
-/* The typing effect */
-@keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: orange }
-}
