--- a/asad-portfolio/src/sass/_base.scss
+++ b/asad-portfolio/src/sass/_base.scss
@@ -4,6 +4,7 @@
   margin:0;
   box-sizing:border-box;
   font-family: 'Poppins', sans-serif;
+  font-size: 20px;
 }
 html{
   scroll-behavior: smooth;
@@ -13,9 +14,9 @@ html{
   margin: auto;
   display: grid;
   grid-template-columns: 90vw;
-  grid-template-rows: 10vh 80vh 0.3fr 0.1fr 0.5fr min-content;
+  grid-template-rows: 10vh 80vh 0.3fr 0.1fr 0.5fr 0.5fr min-content;
   grid-template-areas:
-    "nav"
+    "header-main"
     "hero"
     "services"
     "teckstack"
@@ -34,7 +35,7 @@ html{
   grid-template-columns: 90vw;
   grid-template-rows: 10vh 0.2fr;
   grid-template-areas:
-    "nav"
+    "header-main"
     "heroAllblogs"
     "blogs"
     "footer";
