edits from code review, folder structure and header

--- a/Assignment1-asad-portfolio/src/sass/_main.scss
+++ b/Assignment1-asad-portfolio/src/sass/_main.scss
@@ -1,6 +1,6 @@
 @use "./base";
-@use "../pages/Blogspages";
-@use "../component/head/Header";
+@use "../pages/blogsPage/Blogspages";
+@use "../component/header/Header";
 @use "../component/hero/hero";
 @use "../component/services/Card";
 @use "../component/techStack/TechStack";
