adding typescript to assignment2

--- a/Assignment1-asad-portfolio/src/sass/_main.scss
+++ b/Assignment1-asad-portfolio/src/sass/_main.scss
@@ -1,6 +1,7 @@
 @use "./base";
 @use "../pages/blogsPage/Blogspages";
 @use "../component/header/Header";
+@use "../component/header/navBar/NavBar";
 @use "../component/hero/hero";
 @use "../component/services/Card";
 @use "../component/techStack/TechStack";
